commit translated contents

--- a/articles/relnotes/0.3-migration.md
+++ b/articles/relnotes/0.3-migration.md
@@ -1,23 +1,24 @@
 ---
 title: QDK 0.3 语言检查和迁移指南
+description: '介绍 Microsoft Quantum Development Kit 0.3 中的新功能以及如何迁移现有的 Q # 程序。'
 author: beheim
 uid: microsoft.quantum.relnotes.migration-0-3
 ms.author: bettina.heim@microsoft.com
 ms.date: 10/29/2018
 ms.topic: article
-ms.openlocfilehash: 041de6484d95aa89394309813ca4b1dd09072cdf
-ms.sourcegitcommit: f8d6d32d16c3e758046337fb4b16a8c42fb04c39
+ms.openlocfilehash: df86bf163a300c1ce55d3959bd40aea3d8b8a973
+ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 01/29/2020
-ms.locfileid: "76820838"
+ms.lasthandoff: 02/28/2020
+ms.locfileid: "77907726"
 ---
 # <a name="qdk-03-language-release-notes-and-migration-guide"></a>QDK 0.3 语言发行说明和迁移指南
 
 我们非常高兴地介绍了量子开发工具包的最新更新。  此页概述了新的 Q # 语言功能，并介绍了如何将现有的 Q # 程序[迁移](#Migration)到新的语法。  请参阅[此处](xref:microsoft.quantum.language.intro)完整的 Q # 语言说明文档。
 
 
-## <a name="whats-new"></a>新功能 
+## <a name="whats-new"></a>新增功能 
 
 0\.3 更新附带了一系列新语言和编辑器功能。
 
@@ -232,7 +233,7 @@ Windows 10 的 Visual Studio 2017 版本15.8 或更高版本以及 Windows 10、
 > [!NOTE]
 > 迁移脚本需要运行 Windows PowerShell 或 PowerShell Core。
 > Windows PowerShell 随 Windows 10 一起预装。
-> https://github.com/PowerShell/PowerShell 下载适用于 Windows、macOS 或 Linux 的 PowerShell Core。
+> https://github.com/PowerShell/PowerShell下载适用于 Windows、macOS 或 Linux 的 PowerShell Core。
 
 此脚本执行以下四个步骤：
 
